--- a/Cube/Base.lproj/Main.storyboard
+++ b/Cube/Base.lproj/Main.storyboard
@@ -52,6 +52,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="t0D-kv-6ej" kind="show" id="FcC-kz-GtH"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -83,12 +86,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1654" y="-563"/>
+            <point key="canvasLocation" x="1702" y="-567"/>
         </scene>
-        <!--View Controller-->
+        <!--Shape View Controller-->
         <scene sceneID="1uL-8c-w2e">
             <objects>
-                <viewController id="t0D-kv-6ej" sceneMemberID="viewController">
+                <viewController id="t0D-kv-6ej" customClass="ShapeViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="3gf-lm-ZoS"/>
                         <viewControllerLayoutGuide type="bottom" id="9Ne-5q-nYJ"/>
@@ -101,7 +104,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="slw-dE-Qgs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1654" y="177"/>
+            <point key="canvasLocation" x="1702" y="137"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="h27-L7-Vra">
